--- a/app/views/admin_page/show.html.erb
+++ b/app/views/admin_page/show.html.erb
@@ -13,7 +13,7 @@
                     <h5 class="card-title"><%= post.title %></h5>
                     <p class="card-text mb-2 text-muted"><%= post.intro %></p>
                     <%= link_to "Edit", "/admin_page/edit?id=#{post.id}" %><br/>
-                    <%= link_to "Delete", "/admin_page/delete?id=#{post.id}", class: "text-danger" %>
+                    <%= link_to "Delete", "/admin_page/delete?id=#{post.id}", class: "text-danger", method: "delete" %>
                 </div>
             </div>
         </div>
