Added edit page

--- a/app/views/admin_page/new.html.erb
+++ b/app/views/admin_page/new.html.erb
@@ -7,7 +7,7 @@
             Reading time: <%= f.text_field :reading_time, class: "form-control mb-1" %>
             Thumbnail: <%= f.text_field :thumbnail_url, class: "form-control mb-1" %>
             Content: <%= f.text_area :content, class: "form-control mb-1" %>
-            <%= f.submit %>
+            <%= f.submit class: 'btn btn-success'%>
         </div>
     <% end %>
     <%= link_to "Back to admin page", admin_page_index_path, {:class =>"btn btn-primary my-2"} %>
