--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,8 @@
                   <p class="card-text"><%= post.title %></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <%= button_to "View", article_display_path, params: {:id => post.id}, method: "get", class: "btn btn-sm btn-outline-secondary" %>
+                      <%# <<button type="button" class="btn btn-sm btn-outline-secondary">View</button> %>
                     </div>
                     <small class="text-muted"><%= post.reading_time %> min</small>
                   </div>
